feat: Add unit tests for LedgerService, FinanceFacade, and TransactionService
Co-authored-by: aider (ollama/qwen2.5-coder:7b) <aider@aider.chat>